# tasks-crud

./: .gitignore  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
myapp/: AccountOperations.py  TaskOperations.py  admin.py  forms.py  models.py  urls.py  validations.py
myapp/migrations/: 0001_initial.py
myapp/static/: serviceworker.js
myapp/static/css/: home.css  signin.css  taskcreate.css  tasklist.css
myapp/templates/: home.html  manifest.json  signin.html  signup.html  taskcreate.html  taskdetail.html  tasklist.html
notex/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: favicon.ico.br  google.svg.br  serviceworker.c8e582082ca9.js.br  serviceworker.js.br  staticfiles.json
staticfiles/css/: home.9044b500d1e0.css.br  signin.3c85fcfdc788.css  signin.css.br  taskcreate.86532d952c69.css.br  taskcreate.css  tasklist.css  tasklist.css.br
staticfiles/js/: signin.js.br
