[tool.poetry]
name = "myapp"
version = "0.2.5"
description = "crud para tareas"
authors = ["juan <cuentapersonaluni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.15.1"
django = "3.2"
social-auth-app-django = "^5.4.0"
django-environ = "^0.11.2"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
